added ex text file for check sum and updated notebook

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -33,17 +33,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Integrity\n",
+    "# 1. Data Integrity\n",
     "\n",
     "Data we download is the starting point for all of our analyses and conclusions. We should be concerned with its integrity, for our own work, and for reproducibility.\n",
     "\n",
-    "#### Check sums\n",
+    "## Check sums\n",
     "\n",
-    "Although it seems improbable, the risk of data corruption during transfers is real. **Check sums** can be used to verify successful transfers.\n",
+    "Although it seems improbable, the risk of data corruption during transfers is real. Check sums can be used to verify successful transfers.\n",
     "\n",
-    "A check sum is related to a hash function - it is a function t\n",
-    "\n"
+    "A **check sum** is related to a hash function - it is a function that takes a file as an input and outputs a unique character string. A small change in your file will result in a noticeable change in the check sum string.\n",
+    "\n",
+    "#### Example\n",
+    "\n",
+    "Here's a file with 1000 fastq reads. The first few lines look like this:\n",
+    "\n",
+    "The check sum for this file is:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then I went in and added an extra T. Now, the check sum for the changed file is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
