--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -45,35 +45,71 @@
     "\n",
     "#### Example\n",
     "\n",
-    "Here's a file with 1000 fastq reads. The first few lines look like this:\n",
+    "Here's a file with 1000 fastq reads. \n",
+    "\n",
+    "One section of the file looks like this:\n",
+    "\n",
+    "<img src=first.png>\n",
     "\n",
     "The check sum for this file is:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1b2f963dde9bebb703d0f24e0ffe8a84  first1000.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!md5sum first1000.txt"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then I went in and added an extra T. Now, the check sum for the changed file is:"
+    "Then I went in and added an extra T. Now, the check sum for the changed file is:\n",
+    "\n",
+    "<img src=second.png>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1b2f963dde9bebb703d0f24e0ffe8a84  first1000.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!md5sum first1000.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using ``diff`` to find differences between files\n",
+    "\n",
+    "If your check sum suggests that the files are different, and you cannot retransfer the file, then you can use ``diff`` to identify regions that differ between files to, for example, fix them manually.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
