--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Integrity\n",
-    "\n",
-    "#### md5 check sums\n",
-    "\n",
-    "check sum example\n",
-    "\n",
-    "use diff to find blocks with difference\n",
-    "\n",
-    "#### diff\n",
-    "\n",
-    "## 2. Common modules in python (that our lab doesn't use)\n",
+    "Common modules in python (that our lab doesn't use)\n",
     "\n",
     "#### argparse\n",
     "#### subprocess\n",
@@ -49,7 +39,7 @@
     "\n",
     "One section of the file looks like this:\n",
     "\n",
-    "<img src=first.png>\n",
+    "<img src=first_1.png>\n",
     "\n",
     "The check sum for this file is:"
    ]
@@ -79,12 +69,12 @@
    "source": [
     "Then I went in and added an extra T. Now, the check sum for the changed file is:\n",
     "\n",
-    "<img src=second.png>"
+    "<img src=second_1.png>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1b2f963dde9bebb703d0f24e0ffe8a84  first1000.txt\r\n"
+      "9191b9783d98fe7fb147f2efff1adbe4  first1000.txt\r\n"
      ]
     }
    ],
@@ -108,8 +98,84 @@
     "## Using ``diff`` to find differences between files\n",
     "\n",
     "If your check sum suggests that the files are different, and you cannot retransfer the file, then you can use ``diff`` to identify regions that differ between files to, for example, fix them manually.\n",
-    "\n"
+    "\n",
+    "``diff`` spits out blocks of text called \"hunks\" with the differences. Here, this is the fastq read that had the difference."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- withT.txt\t2017-02-09 15:45:36.000000000 -0800\r\n",
+      "+++ withoutT.txt\t2017-02-09 15:46:54.000000000 -0800\r\n",
+      "@@ -8,7 +8,7 @@\r\n",
+      " \r\n",
+      " @5_1101_31375_1103_1\r\n",
+      " \r\n",
+      "-TGCAGGTCGGGGACTAGTAACAGAATAACTGATGTATCGTTCAGAATGTTGAAATAATCGTAGATGTGATTTAAATCATTTACTTTGCGGAACATATAAGGTCGTGATGTGTAGATTGTGTAAATCGCCACTTACGGATG\r\n",
+      "+TGCAGGTCGGGGACTAGTAACAGAATAACTGATGTATCGTTCAGAATGTTGAAAAATCGTAGATGTGATTTAAATCATTTACTTTGCGGAACATATAAGGTCGTGATGTGTAGATTGTGTAAATCGCCACTTACGGATG\r\n",
+      " \r\n",
+      " +\r\n",
+      " \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!diff -u withT.txt withoutT.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Common Python modules \n",
+    "\n",
+    "In our lab, many of us switch between Python, R, Bash, and Excel for evaluating outputs of steps in our Stacks pipeline or formatting files for steps in the pipeline. \n",
+    "\n",
+    "It would be more efficient to automate multiple steps into one program.\n",
+    "\n",
+    "There are Python modules for the many reasons we turn to R:\n",
+    "\n",
+    "- ``matplotlib`` for basic plotting\n",
+    "- ``pandas`` for data frames\n",
+    "- ``numpy`` & ``scipy`` for the fundamentals of math and science computing\n",
+    "\n",
+    "And some other cool modules we could use to beef up our code:\n",
+    "\n",
+    "- ``subprocess`` for running other programs from within a program\n",
+    "- ``argparse`` for managing user input\n",
+    "- ``time`` for time stamps and timing processes\n",
+    "\n",
+    "#### Example: ``easy_ustacks.py``\n",
+    "\n",
+    "To run ``ustacks``, some of our lab members write bash scripts in bash, others write bash scripts in Python (as to not have to learn the syntax of bash). Then, we run the bash script from the terminal. Afterwards, many of us are interested in how many loci are retained per individual per population to decide whether to include all individuals for further analyses. Most of our lab mates then run an additional bash command to count loci, then format the output to fit into excel or R, to then plot. Some of us run ``ustacks`` overnight because we know it takes a long time, but knowing exactly how long it takes could help us make better use of time.\n",
+    "\n",
+    "Here, I've written a simple program that (1) writes your bash script, (2) runs your bash script, (3) plots loci per individual per population, and (4) times how long it takes to run ``ustacks``.\n",
+    "\n",
+    "Here's the [script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/easy_ustacks.py).\n",
+    "\n",
+    "Here's what it looks like at the command line:\n",
+    "\n",
+    "[images of user input/output]\n",
+    "\n",
+    "It may not save huge amounts of time, but it could reduce the"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
