--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -153,6 +153,18 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
+    "\n",
+    "[examples of code and use]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Automation\n",
+    "\n",
+    "\n",
     "#### Example: ``easy_ustacks.py``\n",
     "\n",
     "To run ``ustacks``, some of our lab members write bash scripts in bash, others write bash scripts in Python (as to not have to learn the syntax of bash). Then, we run the bash script from the terminal. Afterwards, many of us are interested in how many loci are retained per individual per population to decide whether to include all individuals for further analyses. Most of our lab mates then run an additional bash command to count loci, then format the output to fit into excel or R, to then plot. Some of us run ``ustacks`` overnight because we know it takes a long time, but knowing exactly how long it takes could help us make better use of time.\n",
@@ -165,17 +177,16 @@
     "\n",
     "[images of user input/output]\n",
     "\n",
-    "It may not save huge amounts of time, but it could reduce the"
+    "It may not save huge amounts of time, but it could reduce the opportunities for human error (e.g., calling the wrong file, or not knowing there was an error in your bash script)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. GitHub\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
