updated notebook and added images for notebook

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -2,26 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "Common modules in python (that our lab doesn't use)\n",
-    "\n",
-    "#### argparse\n",
-    "#### subprocess\n",
-    "#### pandas\n",
-    "#### numpy\n",
-    "#### matplotlib\n",
-    "\n",
-    "## 3. Automation - easy ustacks example\n",
-    "\n",
-    "## (vectors and speed?)\n",
-    "\n",
-    "## 4. GitHub - sharing, collaborating, version control\n"
+    "# FSH 510 Walkthrough: \n",
+    "### Tools for improving reproducibility and efficiency of our bioinformatics"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# 1. Data Integrity\n",
     "\n",
@@ -104,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -129,6 +124,20 @@
    ],
    "source": [
     "!diff -u withT.txt withoutT.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Questions for group\n",
+    "\n",
+    "- How many of us use check sums to verify the success of data downloads?\n",
+    "- How many of us document how/when we downloaded, and check sum verification?\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -185,7 +194,52 @@
    "metadata": {},
    "source": [
     "# 4. GitHub\n",
-    "\n"
+    "\n",
+    "GitHub is a distributed version control system written by the maker of Linux. It has a steep learning curve, but once over the hump, is great for sharing, collaborating, and version control.\n",
+    "\n",
+    "You can use git at the command line, which looks like this:\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<img src=gitbash.png>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "Or through the GitHub Desktop GUI if the command line freaks you out. It looks like this:\n",
+    "\n",
+    "\n",
+    "<img src=gitdesktop.png>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "Some cool things about GitHub:\n",
+    "\n",
+    "- makes it easy to collaborate with others, including infrastructure for controlling versions between users and communication channels like \"issues\"\n",
+    "- supports markdown for pretty and clear documentation \n",
+    "- great documentation for support (when trying to get over the learning curve hump)\n",
+    "- because public, good for science outreach, communication, self-marketing\n",
+    "\n",
+    "You can make releases to package your work at a given time. For example, you could make a release when you finish one project, so that you have a record of what scripts you used.\n",
+    "\n",
+    "Here's what a release looks like:\n",
+    "\n",
+    "<img src=release.png>\n",
+    "\n",
+    "I go to Mary's GitHub and steal her scripts all the time...\n",
+    "\n",
+    "If we had a lab GitHub repository with shared scripts, there would be less reinventing the wheel and a gentler entry into bioinformatics for new students.\n",
+    "\n",
+    "#### Questions for the group\n",
+    "\n",
+    "(1) GitHub versus Evernote?\n",
+    "\n",
+    "- version control\n",
+    "- releases\n",
+    "- better communication (not just chat)\n",
+    "\n",
+    "(2) What do other labs use?"
    ]
   }
  ],
