--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -8,7 +8,10 @@
    },
    "source": [
     "# FSH 510 Walkthrough: \n",
-    "### Tools for improving reproducibility and efficiency of our bioinformatics"
+    "### Basic tools for improving reproducibility and efficiency of our bioinformatics\n",
+    "\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -132,8 +135,8 @@
    "source": [
     "#### Questions for group\n",
     "\n",
-    "- How many of us use check sums to verify the success of data downloads?\n",
-    "- How many of us document how/when we downloaded, and check sum verification?\n",
+    "- How many of us verify the success of data downloads?\n",
+    "- How many of us document how/when we downloaded and verification of successful download?\n",
     "\n",
     "<br>\n",
     "<br>\n",
@@ -164,7 +167,16 @@
     "\n",
     "\n",
     "[examples of code and use]\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "#### Questions for group\n",
+    "\n",
+    "- How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
+    "- \n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n"
    ]
   },
   {
