updated notebook for seminar

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -165,6 +165,13 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
+    "#### Data frames\n",
+    "\n",
+    "#### Plotting\n",
+    "\n",
+    "#### \n",
+    "\n",
+    "\n",
     "\n",
     "[examples of code and use]\n",
     "\n",
@@ -173,7 +180,9 @@
     "#### Questions for group\n",
     "\n",
     "- How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
-    "- \n",
+    "- What other modules do folks use in Python?\n",
+    "- Eleni wanted to know about packages in R that support large numbers of loci, etc., what do folks use?\n",
+    "\n",
     "<br>\n",
     "<br>\n",
     "<br>\n"
