updated notebook and added images for notebook

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -165,16 +165,41 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
-    "#### Data frames\n",
+    "#### ``pandas``\n",
     "\n",
-    "#### Plotting\n",
+    "#### ``numpy`` and ``scipy``\n",
     "\n",
-    "#### \n",
+    "#### ``matplotlib``\n",
+    "\n",
+    "#### ``argparse``\n",
+    "\n",
+    "``argparse`` allows you to define your arguments in place of sys (sys is under the hood), and in defining them, it automatically writes a help file. You can specify flags, allowing your arguments to come in any order. You can make some arguments required, causing the program to exit and printing to the screen the argument you did not name.\n",
+    "\n",
+    "In the script, it looks like this:\n",
+    "\n",
+    "<br>\n",
+    "<img src=argparse.png>\n",
+    "<br>\n",
+    "\n",
+    "And at the command line, the help file looks like this:\n",
+    "\n",
+    "<br>\n",
+    "<img src=helpfile.png>\n",
+    "<br>\n",
     "\n",
     "\n",
+    "#### ``time``\n",
     "\n",
-    "[examples of code and use]\n",
+    "Here's a simple timer function:\n",
     "\n",
+    "<img src=timerfn.png>\n",
+    "\n",
+    "Then, feeding in start and end times by using ``time.time()`` before and after a given process, you can print it to the screen like this:\n",
+    "\n",
+    "[NEED TO GET PIC]\n",
+    "\n",
+    "\n",
+    "#### ``subprocess``\n",
     "\n",
     "\n",
     "#### Questions for group\n",
