--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "It would be more efficient to automate multiple steps into one program.\n",
     "\n",
-    "There are Python modules for the many reasons we turn to R:\n",
+    "At first, I did all data frame work, plotting, and analyses in R because that's where I was comfortable and people told me Python wasn't great at these things. It turns out there are Python modules for the many reasons we turn to R, and they work just fine:\n",
     "\n",
     "- ``matplotlib`` for basic plotting\n",
     "- ``pandas`` for data frames\n",
@@ -166,6 +166,24 @@
     "- ``time`` for time stamps and timing processes\n",
     "\n",
     "#### ``pandas``\n",
+    "\n",
+    "``pandas`` supports data frame objects and is highly compatible with other data analysis modules. It also makes it easy to change file type, like from Excel to CSV to text, etc.\n",
+    "\n",
+    "Super similar to R. For example:\n",
+    "\n",
+    "- read in a csv with ``pandas.read_csv()``\n",
+    "- read out a CSV with ``pandas.DataFrame.to_CSV()``\n",
+    "- sort df with ``pandas.DataFrame.sort_values()``\n",
+    "- subset with attribute ``.sub()`` including boolean subsets like ``(df > 0).all()``\n",
+    "- merging, joining, concatenating data frames with ``pandas.concat()`` & ``pandas.join()``\n",
+    "\n",
+    "Make a data frame using lists:\n",
+    "\n",
+    "<br>\n",
+    "<img src=printdf.png>\n",
+    "<br>\n",
+    "<img src=printeddf.png>\n",
+    "\n",
     "\n",
     "#### ``numpy`` and ``scipy``\n",
     "\n",
@@ -201,6 +219,11 @@
     "\n",
     "#### ``subprocess``\n",
     "\n",
+    "I use ``subprocess`` to run scripts from within my Python script, but it there's a lot more it can do that goes over my head like managing standard output and errors.\n",
+    "\n",
+    "<br>\n",
+    "<img src=subprocess.png>\n",
+    "<br>\n",
     "\n",
     "#### Questions for group\n",
     "\n",
