--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "One section of the file looks like this:\n",
     "\n",
-    "<img src=first_1.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/first_1.png?raw=true)\n",
     "\n",
     "The check sum for this file is:"
    ]
@@ -46,7 +46,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -63,18 +65,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Then I went in and added an extra T. Now, the check sum for the changed file is:\n",
     "\n",
-    "<img src=second_1.png>"
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/second_1.png?raw=true)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -91,7 +98,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Using ``diff`` to find differences between files\n",
     "\n",
@@ -104,7 +114,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -131,7 +143,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Questions for group\n",
     "\n",
@@ -145,7 +160,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# 2. Common Python modules \n",
     "\n",
@@ -196,13 +214,15 @@
     "In the script, it looks like this:\n",
     "\n",
     "<br>\n",
-    "<img src=argparse.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/argparse.png?raw=true)\n",
     "<br>\n",
+    "\n",
+    "Notice that it doesn't actually take much more code than defining with ``sys.argv`` and commenting in your script.\n",
     "\n",
     "And at the command line, the help file looks like this:\n",
     "\n",
     "<br>\n",
-    "<img src=helpfile.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/helpfile.png?raw=true)\n",
     "<br>\n",
     "\n",
     "\n",
@@ -210,7 +230,7 @@
     "\n",
     "Here's a simple timer function:\n",
     "\n",
-    "<img src=timerfn.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timerfn.png?raw=true)\n",
     "\n",
     "Then, feeding in start and end times by using ``time.time()`` before and after a given process, you can print it to the screen like this:\n",
     "\n",
@@ -222,7 +242,7 @@
     "I use ``subprocess`` to run scripts from within my Python script, but it there's a lot more it can do that goes over my head like managing standard output and errors.\n",
     "\n",
     "<br>\n",
-    "<img src=subprocess.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/subprocess.png?raw=true)\n",
     "<br>\n",
     "\n",
     "#### Questions for group\n",
@@ -238,10 +258,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# 3. Automation\n",
     "\n",
+    "## Functions\n",
+    "\n",
+    "Write functions for this you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
+    "\n",
+    "#### Example: yes-no-else user input\n",
+    "\n",
+    "\n",
+    "## Programs \n",
     "\n",
     "#### Example: ``easy_ustacks.py``\n",
     "\n",
@@ -260,7 +291,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# 4. GitHub\n",
     "\n",
@@ -270,7 +304,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "<img src=gitbash.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/gitbash.png?raw=true)\n",
     "\n",
     "<br>\n",
     "\n",
@@ -278,7 +312,7 @@
     "Or through the GitHub Desktop GUI if the command line freaks you out. It looks like this:\n",
     "\n",
     "\n",
-    "<img src=gitdesktop.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/gitdesktop.png?raw=true)\n",
     "\n",
     "<br>\n",
     "\n",
@@ -294,11 +328,11 @@
     "\n",
     "Here's what a release looks like:\n",
     "\n",
-    "<img src=release.png>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/release.png?raw=true)\n",
     "\n",
     "I go to Mary's GitHub and steal her scripts all the time...\n",
     "\n",
-    "If we had a lab GitHub repository with shared scripts, there would be less reinventing the wheel and a gentler entry into bioinformatics for new students.\n",
+    "If we had a lab GitHub repository with shared scripts, there would be less reinventing the wheel and a more efficient entry into bioinformatics for new students.\n",
     "\n",
     "#### Questions for the group\n",
     "\n",
