updated notebook and easy ustacks script

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -269,7 +269,13 @@
     "\n",
     "Write functions for this you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
     "\n",
-    "#### Example: yes-no-else user input\n",
+    "#### Example: recursive function for yes-no-else user input\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/getinput.png?raw=true)\n",
+    "\n",
+    "At the command line, it looks like this:\n",
+    "\n",
+    "[GET IMAGE!!!]\n",
     "\n",
     "\n",
     "## Programs \n",
