added pyplot pic

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -150,8 +150,9 @@
    "source": [
     "#### Questions for group\n",
     "\n",
-    "- How many of us verify the success of data downloads?\n",
-    "- How many of us document how/when we downloaded and verification of successful download?\n",
+    "(1) How many of us verify the success of data downloads?\n",
+    "\n",
+    "(2) How many of us document how/when we downloaded and verification of successful download?\n",
     "\n",
     "<br>\n",
     "<br>\n",
@@ -167,15 +168,14 @@
    "source": [
     "# 2. Common Python modules \n",
     "\n",
-    "In our lab, many of us switch between Python, R, Bash, and Excel for evaluating outputs of steps in our Stacks pipeline or formatting files for steps in the pipeline. \n",
+    "In our lab, many of us switch between Python, R, Bash, and Excel for evaluating outputs of steps in our Stacks pipeline or formatting files for steps in the pipeline. It could be more efficient to automate multiple steps into one program.\n",
     "\n",
-    "It would be more efficient to automate multiple steps into one program.\n",
+    "At first, I did all dataframe work, plotting, and analyses in R because that's where I was comfortable and people told me Python wasn't great at these things. It turns out there are Python modules for the many reasons we turn to R, and they work just fine.\n",
     "\n",
-    "At first, I did all data frame work, plotting, and analyses in R because that's where I was comfortable and people told me Python wasn't great at these things. It turns out there are Python modules for the many reasons we turn to R, and they work just fine:\n",
-    "\n",
-    "- ``matplotlib`` for basic plotting\n",
-    "- ``pandas`` for data frames\n",
     "- ``numpy`` & ``scipy`` for the fundamentals of math and science computing\n",
+    "- ``matplotlib`` for basic plotting, based on MATLAB's plotting functions\n",
+    "- ``pandas`` for higher level computing with dataframes\n",
+    "\n",
     "\n",
     "And some other cool modules we could use to beef up our code:\n",
     "\n",
@@ -183,24 +183,8 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
-    "#### ``pandas``\n",
+    "#### Example: traditional R task in Python\n",
     "\n",
-    "``pandas`` supports data frame objects and is highly compatible with other data analysis modules. It also makes it easy to change file type, like from Excel to CSV to text, etc.\n",
-    "\n",
-    "Super similar to R. For example:\n",
-    "\n",
-    "- read in a csv with ``pandas.read_csv()``\n",
-    "- read out a CSV with ``pandas.DataFrame.to_CSV()``\n",
-    "- sort df with ``pandas.DataFrame.sort_values()``\n",
-    "- subset with attribute ``.sub()`` including boolean subsets like ``(df > 0).all()``\n",
-    "- merging, joining, concatenating data frames with ``pandas.concat()`` & ``pandas.join()``\n",
-    "\n",
-    "Make a data frame using lists:\n",
-    "\n",
-    "<br>\n",
-    "<img src=printdf.png>\n",
-    "<br>\n",
-    "<img src=printeddf.png>\n",
     "\n",
     "\n",
     "#### ``numpy`` and ``scipy``\n",
@@ -247,9 +231,9 @@
     "\n",
     "#### Questions for group\n",
     "\n",
-    "- How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
-    "- What other modules do folks use in Python?\n",
-    "- Eleni wanted to know about packages in R that support large numbers of loci, etc., what do folks use?\n",
+    "(1) How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
+    "(2) What other modules do folks use in Python?\n",
+    "(3) What packages to folks use in other languages like R? (Eleni brought this up)\n",
     "\n",
     "<br>\n",
     "<br>\n",
@@ -287,7 +271,7 @@
     "\n",
     "[images of user input/output]\n",
     "\n",
-    "It may not save huge amounts of time, but it could reduce the opportunities for human error (e.g., calling the wrong file, or not knowing there was an error in your bash script)."
+    "Automating and verification of steps to user may reduce opportunities for human error."
    ]
   },
   {
