added image of pyplot fig

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -195,6 +195,9 @@
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/pyplot.png?raw=true)\n",
     "\n",
+    "Example of multiple boxplots:\n",
+    "\n",
+    "![image]()\n",
     "#### ``argparse``\n",
     "\n",
     "``argparse`` allows you to define your arguments in place of sys (sys is under the hood), and in defining them, it automatically writes a help file. You can specify flags, allowing your arguments to come in any order. You can make some arguments required, causing the program to exit and printing to the screen the argument you did not name.\n",
