updated timer image for notebook

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -183,21 +183,23 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
-    "#### Example: traditional R task in Python\n",
-    "\n",
-    "\n",
-    "\n",
     "#### ``numpy`` and ``scipy``\n",
     "\n",
     "#### ``matplotlib``\n",
     "\n",
     "Basic plotting in ``matplotlib`` isn't too different from basic plotting in R, just not built in and different syntax.\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/pyplot.png?raw=true)\n",
     "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
     "Example of multiple boxplots:\n",
     "\n",
-    "![image]()\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/pyplot_fig.png?raw=true)\n",
+    "\n",
     "#### ``argparse``\n",
     "\n",
     "``argparse`` allows you to define your arguments in place of sys (sys is under the hood), and in defining them, it automatically writes a help file. You can specify flags, allowing your arguments to come in any order. You can make some arguments required, causing the program to exit and printing to the screen the argument you did not name.\n",
