finalized easy ustacks script

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "# FSH 510 Walkthrough: \n",
+    "# FSH 510 Walkthrough\n",
     "### Basic tools for improving reproducibility and efficiency of our bioinformatics\n",
     "\n",
     "<br>\n",
@@ -223,7 +223,7 @@
     "\n",
     "Here's a simple timer function:\n",
     "\n",
-    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timerfn.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timer2.png?raw=true)\n",
     "\n",
     "Then, feeding in start and end times by using ``time.time()`` before and after a given process, you can print it to the screen like this:\n",
     "\n",
@@ -241,7 +241,9 @@
     "#### Questions for group\n",
     "\n",
     "(1) How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
+    "\n",
     "(2) What other modules do folks use in Python?\n",
+    "\n",
     "(3) What packages to folks use in other languages like R? (Eleni brought this up)\n",
     "\n",
     "<br>\n",
@@ -260,9 +262,11 @@
     "\n",
     "## Functions\n",
     "\n",
-    "Write functions for this you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
+    "Write functions for things you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
     "\n",
     "#### Example: recursive function for yes-no-else user input\n",
+    "\n",
+    "<br>\n",
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/getinput.png?raw=true)\n",
     "\n",
