--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -223,12 +223,9 @@
     "\n",
     "Here's a simple timer function:\n",
     "\n",
+    "<br>\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timer2.png?raw=true)\n",
-    "\n",
-    "Then, feeding in start and end times by using ``time.time()`` before and after a given process, you can print it to the screen like this:\n",
-    "\n",
-    "[NEED TO GET PIC]\n",
-    "\n",
+    "<br>\n",
     "\n",
     "#### ``subprocess``\n",
     "\n",
@@ -274,7 +271,7 @@
     "\n",
     "#### Example: ``easy_ustacks.py``\n",
     "\n",
-    "To run ``ustacks``, some of our lab members write bash scripts in bash, others write bash scripts in Python (as to not have to learn the syntax of bash). Then, we run the bash script from the terminal. Afterwards, many of us are interested in how many loci are retained per individual per population to decide whether to include all individuals for further analyses. Most of our lab mates then run an additional bash command to count loci, then format the output to fit into excel or R, to then plot. Some of us run ``ustacks`` overnight because we know it takes a long time, but knowing exactly how long it takes could help us make better use of time.\n",
+    "To run ``ustacks``, some of our lab members write bash scripts in bash, others write bash scripts in Python (as to not have to learn the syntax of bash). Then, we run the bash script from the terminal. Afterwards, many of us are interested in how many loci are retained per individual per population to decide whether to include all individuals for further analyses. Most of our lab mates then run an additional bash command to count loci, then format the output to fit into excel or R, to then plot. Some of us run ``ustacks`` overnight because we know it takes a long time, but knowing exactly how long it takes could help us make better use of time. Automating and verification of steps to user may reduce opportunities for human error.\n",
     "\n",
     "Here, I've written a simple program that (1) writes your bash script, (2) runs your bash script, (3) plots loci per individual per population, and (4) times how long it takes to run ``ustacks``.\n",
     "\n",
@@ -282,9 +279,21 @@
     "\n",
     "Here's what it looks like at the command line:\n",
     "\n",
-    "[images of user input/output]\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_1.png?raw=true)\n",
+    "<br>\n",
     "\n",
-    "Automating and verification of steps to user may reduce opportunities for human error."
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_2.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_3.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "\n"
    ]
   },
   {
