fixed formatting in notebook for seminar

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -148,7 +148,7 @@
     "editable": true
    },
    "source": [
-    "#### Questions for group\n",
+    "### Questions for group\n",
     "\n",
     "(1) How many of us verify the success of data downloads?\n",
     "\n",
@@ -183,7 +183,6 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
-    "#### ``numpy`` and ``scipy``\n",
     "\n",
     "#### ``matplotlib``\n",
     "\n",
@@ -218,6 +217,13 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/helpfile.png?raw=true)\n",
     "<br>\n",
     "\n",
+    "#### ``subprocess``\n",
+    "\n",
+    "I use ``subprocess`` to run scripts from within my Python script, but there's a lot more it can do that goes over my head like managing standard output and errors.\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/subprocess.png?raw=true)\n",
+    "<br>\n",
     "\n",
     "#### ``time``\n",
     "\n",
@@ -227,15 +233,7 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timer2.png?raw=true)\n",
     "<br>\n",
     "\n",
-    "#### ``subprocess``\n",
-    "\n",
-    "I use ``subprocess`` to run scripts from within my Python script, but it there's a lot more it can do that goes over my head like managing standard output and errors.\n",
-    "\n",
-    "<br>\n",
-    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/subprocess.png?raw=true)\n",
-    "<br>\n",
-    "\n",
-    "#### Questions for group\n",
+    "### Questions for group\n",
     "\n",
     "(1) How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
     "\n",
@@ -293,6 +291,9 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_3.png?raw=true)\n",
     "<br>\n",
     "\n",
+    "### Questions for the group\n",
+    "\n",
+    "(1) How do you make the trade-off for dedicating time to automating (to save time)?\n",
     "\n"
    ]
   },
@@ -335,13 +336,19 @@
     "\n",
     "Here's what a release looks like:\n",
     "\n",
+    "<br>\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/release.png?raw=true)\n",
     "\n",
+    "<br>\n",
     "I go to Mary's GitHub and steal her scripts all the time...\n",
     "\n",
     "If we had a lab GitHub repository with shared scripts, there would be less reinventing the wheel and a more efficient entry into bioinformatics for new students.\n",
     "\n",
-    "#### Questions for the group\n",
+    "# 5. Jupyter Notebook\n",
+    "\n",
+    "This is a Jupyter Notebook!\n",
+    "\n",
+    "### Questions for the group\n",
     "\n",
     "(1) GitHub versus Evernote?\n",
     "\n",
